# gemini-bball

./: .gitignore  CONTRIBUTING.md  MediaPipe Object Tracking and Scoring_.txt  Open Source Repositories and Tools Using MediaPipe.md  README.md  SYSTEM_REQUIREMENTS.txt  ToolRepoName-Functionality-Platforms-Reference.csv  USER_GUIDE.md  ball.json  ball.py  example.py  requirements.txt  run_multi_ball_detector.py  run_webcam_analyzer.py  run_webcam_analyzer_with_ui.py  setup.cfg  setup.py
gemini-bball-main/: README.md
src/: __init__.py  main.py
src/analysis/: __init__.py  base.py  gemini_backend.py  ollama_backend.py
src/basketball_shot_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: __init__.py  shot_models.py
src/pipeline/: __init__.py  real_time_analyzer.py
src/utils/: __init__.py  frame_processor.py  ollama_detector.py  tracking.py  ui_controls.py
tests/: __init__.py  direct_test.py  simple_test.py  test_core.py  test_gemini.py  test_imports.py  test_installation.py  test_multi_ball_detection.py  test_ollama_detector.py  test_ollama_url.py  test_realtime.py  test_webcam.py
tests/test_images/: download_test_images.py
