[metadata]
description-file = README.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    opencv-python>=4.8.0
    mediapipe>=0.10.0
    numpy>=1.24.0
    pillow>=10.0.0
    fastapi>=0.95.0
    uvicorn>=0.22.0
    python-multipart>=0.0.6
    requests>=2.28.0
    httpx>=0.24.0
    aiohttp>=3.8.4
    ollama>=0.1.5
    google-generativeai>=0.3.0
    protobuf>=4.25.0
    python-dotenv>=1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    basketball-analyzer = src.cli:main
